FUTBOL BRASIL: Mejoras l&f, valiación de números de clientes de prueba

--- a/FutbolBrasil/web/app/views/wap/mtm.scala.html
+++ b/FutbolBrasil/web/app/views/wap/mtm.scala.html
@@ -4,7 +4,7 @@
 @if(HD.getLevelSupport() < models.wap.HandsetDetection.HTML) {
 } else {
 
-    @html4(true){
+    @html4(true,"mtm"){
 
 
         <div class="row">
