--- a/FutbolBrasil/web/app/views/wap/matches.scala.html
+++ b/FutbolBrasil/web/app/views/wap/matches.scala.html
@@ -11,7 +11,7 @@
 
 } else {
 
-    @html4(true){
+    @html4(true,"matches"){
 
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
