FUTBOL BRASIL: Fixed bug css position loading

--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/templates/loading.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/templates/loading.html
@@ -1,5 +1,3 @@
-<div id="screen-block" class="h-horizontal" ng-click="clickPage()" >
-  <div  class="h-vertical">
-    <img  src="img/loading.svg" style="width: 50px; height: auto;"  class="rotate" onerror="this.src='img/loading.png'">
-  </div>
+<div id="screen-block" ng-click="clickPage()" >
+    <img  src="img/loading.svg"   class="h-center rotate" onerror="this.src='img/loading.png'">
 </div>
