--- a/FutbolBrasil/futbol-brasil/app/styles/default.css
+++ b/FutbolBrasil/futbol-brasil/app/styles/default.css
@@ -857,17 +857,7 @@ h6.team-name {
   color:rgb(122,184,0);
 }
 
-#screen-block {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 8;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0,0,0,0.7);
-  text-align:center;
-  vertical-align:middle;
- }
+
 
 
 
@@ -1049,6 +1039,28 @@ h6.team-name {
       -webkit-box-orient: vertical;
     }
 
+
+    #screen-block {
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 8;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0,0,0,0.7);
+      text-align:center;
+     }
+
+    .h-center {
+      position: absolute;
+      top:0;
+      left:0;
+      right:0;
+      bottom:0;
+      margin: auto;
+      width: 50px;
+      height: auto;
+    }
 
     /*</alidaniel>*/
 
