--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/prediction.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/prediction.html
@@ -5,13 +5,13 @@
                 <div class="container">
 
                   <div class="row h-header green">
-                    <div class="col-xs-2 tabs" ng-click="prevPage($index)">
+                    <div class="col-xs-2" ng-click="prevPage($index)">
                       <span class="mdi-navigation-arrow-back" ng-hide="leagues[$index-1].name === undefined"></span>
                     </div>
                     <div class="col-xs-8">
                       <span ng-bind="league.name" class="caption"></span>
                     </div>
-                    <div class="col-xs-2 tabs" ng-click="nextPage($index)">
+                    <div class="col-xs-2" ng-click="nextPage($index)">
                       <span  class="mdi-navigation-arrow-forward" ng-hide="leagues[$index+1].name === undefined"></span>
                     </div>
                   </div>
@@ -22,11 +22,9 @@
 
                       <span style="font-size:1.2em;">{{leagues[$index].bet.client_bets}}</span>
                       <span translate>SECTIONS.BETS.PREDICTIONS</span>
-                      <i style="font-size:1.6em;"class="mdi-social-person" ></i>
                       <span>/</span>
                       <span style="font-size:1.8em;">{{leagues[$index].bet.total_bets}}</span>
                       <span translate>SECTIONS.NOTISTATS.MATCHES</span>
-                      <i style="font-size:1.6em;" class="mdi-content-inbox" ></i>
 
                     </div>
                   </div>
@@ -42,37 +40,37 @@
                             <table class="table" >
                               <thead>
                               <tr>
-                                <th colspan="3" class="h-header yellow">
+                                <th colspan="3" class="h-header light-blue">
                                   <span ng-bind="getDate(fixture.date)"></span>
                                 </th>
                               </tr>
                               </thead>
                               <tbody>
 
-                              <tr ng-repeat="match in fixture.matches">
+                              <tr ng-repeat="match in fixture.matches" class="h-match" >
 
-                                <td class="col-xs-4 bet"
+                                <td class="col-xs-4"
                                     ng-click="setBet(match.status.id_status, 0, $parent.$parent.$index, $parent.$index, $index)"
-                                    ng-class="{active: match.bet.client_bet === 0}">
-                                  <i class="mdi-navigation-check animated flipInX"></i>
-                                  <h6 ng-bind="match.home_team.name" class="team-name"></h6>
-                                  <span ng-bind="match.home_team_goals" class="goal" ng-if="match.status.id_status != 0"></span>
+                                    ng-class="{active: match.bet.client_bet === 0, winner: match.home_team_goals >= match.away_team_goals}">
+                                  <span ng-bind="match.home_team.name" class="h-name-team"></span>
+                                  <span ng-bind="match.home_team_goals" class="h-goal-team" ng-if="match.status.id_status != 0"></span>
                                 </td>
 
-                                <td class="col-xs-4 bet"
+                                <td class="col-xs-4"
                                     ng-click="setBet(match.status.id_status, 1, $parent.$parent.$index, $parent.$index, $index)"
                                     ng-class="{active: match.bet.client_bet == 1}">
-                                  <i class="mdi-navigation-check animated flipInX"></i>
-                                  <span ng-bind="getTime(match.date)" class="date"></span> <br/>
-                                  <span ng-bind="match.status.name" class="status _{{match.status.id_status}}"></span>
+                                  <span ng-bind="getTime(match.date)" class="date"></span>
+                                  <br/>
+                                  <span class="status _{{match.status.id_status}}">
+                                    {{ match.status.name | translate}}
+                                  </span>
                                 </td>
 
-                                <td class="col-xs-4 bet"
+                                <td class="col-xs-4"
                                     ng-click="setBet(match.status.id_status, 2, $parent.$parent.$index,$parent.$index,$index)"
-                                    ng-class="{active: match.bet.client_bet == 2}">
-                                  <i class="mdi-navigation-check animated flipInX"></i>
-                                  <h6 ng-bind="match.away_team.name" class="team-name"></h6>
-                                  <span ng-bind="match.away_team_goals" class="goal" ng-if="match.status.id_status != 0"></span>
+                                    ng-class="{active: match.bet.client_bet == 2, winner: match.away_team_goals >= match.home_team_goals}">
+                                  <span ng-bind="match.away_team.name" class="h-name-team"></span>
+                                  <span ng-bind="match.away_team_goals" class="h-goal-team" ng-if="match.status.id_status != 0"></span>
                                 </td>
 
                               </tr>
@@ -85,60 +83,12 @@
                     </div> <!--wrapper-->
                   </div> <!--row-->
 
-
-
-                  <div  class="no-content-panel h-horizontal" ng-show="league.empty" >
-                    <div class="h-vertical">
+                  <div  class="no-content-panel" ng-show="league.empty" >
                       <i class="mdi-action-info-outline"></i>
                       <div class="no-content-panel-title" translate>EMPTY_STATES.PREDICTIONS</div>
-                    </div>
                   </div>
 
-
-
                 </div>
-
-
-
-
-                <!--div class="row row-header">
-
-
-
-
-
-                    <div class="col-xs-12">
-                        <div class="row row-header-competition">
-                            <div class="col-xs-4 tabs text-left" ng-click="prevPage($index)" >
-                                <span ng-bind="leagues[$index-1].name" ></span>
-                            </div>
-                            <div class="col-xs-4">
-                                <span ng-bind="league.name"></span>
-                            </div>
-                            <div class="col-xs-4 tabs text-right" ng-click="nextPage($index)">
-                                <span ng-bind="leagues[$index+1].name" ></span>
-                            </div>
-                        </div>
-
-                        <div class="row h-header red">
-                            <div ng-show="league.bet" class="col-xs-12 text-center"
-                                  ng-click="saveBet($index, league.id_competitions)">
-
-                                <span style="font-size:1.2em;">{{leagues[$index].bet.client_bets}}</span>
-                                <span translate>SECTIONS.BETS.PREDICTIONS</span>
-                                <i style="font-size:1.6em;"class="mdi-social-person" ></i>
-                                <span>/</span>
-                                <span style="font-size:1.8em;">{{leagues[$index].bet.total_bets}}</span>
-                                <span translate>SECTIONS.NOTISTATS.MATCHES</span>
-                                <i style="font-size:1.6em;" class="mdi-content-inbox" ></i>
-
-
-                            </div>
-                        </div>
-
-                    </div>
-                </div-->
-
 
 
             </li>
