--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/news.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/news.html
@@ -1,18 +1,47 @@
-
-
-
 <div id="wrapper" class="page">
     <div class="scroller">
+
         <div class="container">
-            <div class="row h-list news" ng-show="hasNews">
-                <div class="col-xs-12"
+
+          <!--div class="row" >
+
+              <div class="list-group" >
+                <div class="list-group-item"
                      ng-repeat="item in news track by item.idNews"
-                     ng-click="showContentNews(item)" on-last-repeat>
-                    <h6 class="headline h-ellipsis" style="font-weight:bold;" >{{item.title}}</h6>
+                     ng-show="hasNews"
+                     ng-click="showContentNews(item)">
+                  <div class="row-picture">
+                    <img  src="http://www.mismarcadores.com/res/image/data/hGlHA3CO-EkETOV6k.png" alt="icon">
+                  </div>
+                  <div class="row-content">
+                    <span class="h-ellipsis" style="color: rgb(0,40,120);">{{item.title}}</span>
                     <i class="icon mdi-device-access-time"></i>
                     <span class="moment" style="color: #2c9cd3;">{{fromNow(item.publicationDate)}}</span>
+                  </div>
                 </div>
-            </div>
+
+            </div-->
+
+                      <div class="row h-list news">
+
+                          <div class="col-xs-12 "
+                               ng-repeat="item in news track by item.idNews"
+                               ng-show="hasNews"
+                               on-last-repeat ng-click="showContentNews(item)">
+
+                            <div class="col-xs-4" style="border:0; padding:0;">
+                              <img class="img-thumbnail" style="width:85%; height: auto;" src="http://www.mismarcadores.com/res/image/data/hGlHA3CO-EkETOV6k.png" alt="icon">
+                            </div>
+                            <div class="col-xs-8" style="border:0; padding:0;">
+                              <span class="h-headline h-ellipsis" style="font-weight:bold;" >{{item.title}}</span>
+                              <br />
+                              <i class="icon mdi-device-access-time"></i>
+                              <span class="moment" style="color: #2c9cd3;">{{fromNow(item.publicationDate)}}</span>
+                            </div>
+
+                          </div>
+                        </div>
+          </div>
         </div>
     </div>
 </div>
