--- a/FutbolBrasil/futbol-brasil/app/styles/default.css
+++ b/FutbolBrasil/futbol-brasil/app/styles/default.css
@@ -30,7 +30,7 @@ body,ul,li { padding: 0; margin: 0; border: 0; width: 100%; height: 100%; color:
 
 #wrapperM {
     position: absolute;
-    z-index:9;
+    z-index:20;
     top: 50px;
     bottom: 0;
     width: 80%;
@@ -59,7 +59,7 @@ header, footer {
     width: 100%;
     height: 50px;
     line-height: 50px;
-    background-color: #FFFFFF;
+    background: rgb(0,40,120);
     padding: 0 !important;
     margin:0 !important;
     border: 0;
@@ -74,7 +74,7 @@ footer {
     color:#002878;
     bottom: 0;
     background: rgb(0,40,120);
-    z-index: 7;
+    z-index: 10;
 }
 
 footer .option {
@@ -800,6 +800,7 @@ h6.team-name {
 
     /*<v2>*/
 
+
     .h-header {
       position:relative;
       text-align: center;
@@ -840,26 +841,28 @@ h6.team-name {
 
     .h-list *[class *= 'col-'] {
       text-align: left;
-      height:50px;
+      min-height:50px;
       line-height: 50px;
-      border-bottom: solid 1pt #ffca00;
+      border-bottom: solid 1pt rgb(254,209,0);
       font-weight:bold;
     }
 
     .h-list.news *[class *= 'col-'] {
-        height:100px;
-        line-height: 25px;
+       line-height: 1;
+       padding: 15px;
     }
 
-    .h-list.news .headline {
+
+
+
+    .h-list.news .h-headline {
         font-weight: bold;
-        font-size: 1.4em;
+        font-size: 1.2em;
     }
 
     .h-list *[class *= 'col-']:last-child {
       border: 0 !important;
     }
-
 
     .content-news #wrapper,
     .content-news #wrapper2,
@@ -912,10 +915,9 @@ h6.team-name {
 
     .content-mtm #wrapper2 {
       top: 185px;
+      bottom: 50px;
       z-index: 10;
     }
-
-
 
     .content-news .moment {
       color: #2c9cd3;
@@ -986,7 +988,7 @@ h6.team-name {
       position: absolute;
       top: 0;
       left: 0;
-      z-index: 8;
+      z-index: 10;
       width: 100%;
       height: 100%;
       background-color: rgba(0,0,0,0.7);
@@ -1003,6 +1005,7 @@ h6.team-name {
       width: 50px;
       height: auto;
     }
+
 
 
     /*</v2>*/
