--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/standings.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/standings.html
@@ -9,9 +9,8 @@
                  ng-repeat="competition in item.competitions"
                  ng-click="showContentPhases(competition)"
                  data-news="{{ competition.id_competitions }}" on-last-repeat>
-
-              <i class="mdi-action-bookmark" style="font-size:2em; vertical-align: middle;"></i>
-              <span>{{competition.name}}</span>
+              <i class="mdi-action-bookmark h-headline" ></i>
+              <span class="h-headline">{{competition.name}}</span>
             </div>
 
           </div>
@@ -39,7 +38,7 @@
 
           <div class="row">
             <div class="col-xs-12 h-header green">
-              <span ng-bind="item.competition.name"></span>
+              <span class="h-headline" ng-bind="item.competition.name"></span>
             </div>
           </div>
 
@@ -47,8 +46,8 @@
             <div class="col-xs-12" ng-repeat="phase in item.phases"
                  ng-click="showContentRanking(item.competition.id_competitions
                         , phase.id_phases)">
-              <i class="mdi-action-bookmark" style="font-size:2em; vertical-align: middle;"></i>
-              <span ng-bind="phase.global_name"></span>
+              <i class="mdi-action-bookmark h-headline"></i>
+              <span class="h-headline" ng-bind="phase.global_name"></span>
             </div>
           </div>
 
