--- a/FutbolBrasil/futbol-brasil/app/styles/default.css
+++ b/FutbolBrasil/futbol-brasil/app/styles/default.css
@@ -5,7 +5,7 @@ row:not(input):not(textarea) {
 
 * { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box;}
 html { -ms-touch-action: none; font-family: Helvetica; }
-body,ul,li { padding: 0; margin: 0; border: 0; width: 100%; height: 100%; color:#002878; background:#ffffff !important;}
+body,ul,li { padding: 0; margin: 0; border: 0; width: 100%; height: 100%; color:#002878; background:#ffffff !important; font-size: 62.5% important;}
 
 .footer-section{color: #FFFFFF !important; text-decoration: none  !important; }
 .footer-section:link {color: #FFFFFF !important; text-decoration: none  !important; }
@@ -852,13 +852,18 @@ h6.team-name {
        padding: 15px;
     }
 
+    .content-standings .h-headline {font-size: 2em; font-weight:bold;}
+    .content-news .h-headline {font-size: 2em; font-weight:bold;}
+    .content-news #wrapper2 .h-headline {font-size: 2em;}
+    .content-news .h-moment {font-size: 1.2em; color: rgb(44,156,211);}
+    .content-news .h-body {font-size: 1.4em; margin-top: 10px !important;}
 
-
-
-    .h-list.news .h-headline {
-        font-weight: bold;
-        font-size: 1.2em;
+    @media(max-width: 720px) {
+      .content-standings .h-headline {font-size: 1.4em; font-weight:bold;}
+      .content-news .h-headline {font-size: 1.4em; font-weight:bold;}
+      .content-news #wrapper2 .h-headline {font-size: 2em;}
     }
+
 
     .h-list *[class *= 'col-']:last-child {
       border: 0 !important;
@@ -919,13 +924,7 @@ h6.team-name {
       z-index: 10;
     }
 
-    .content-news .moment {
-      color: #2c9cd3;
-    }
 
-    .content-news .body {
-      margin-top: 10px !important;
-    }
 
     .h-logo {
       height: auto;
