FUTBOL BRASIL: Se actualizan las fechas y bug de mtm

--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/mtm.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/mtm.html
@@ -23,7 +23,7 @@
                             <td style="width: 33% !important; vertical-align:middle;"
                                 ng-class="{winner: match.home_team_goals >= match.away_team_goals}">
                               <span ng-bind="match.homeTeam.name" class="h-name-team"></span>
-                              <span ng-bind="match.home_team_goals class="h-goal-team" ng-if="match.id_status != 0"></span>
+                              <span ng-bind="match.home_team_goals" class="h-goal-team" ng-if="match.id_status != 0"></span>
                             </td>
 
                             <td style="width: 33% !important;  vertical-align:middle;">
