--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/scorers.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/scorers.html
@@ -35,7 +35,7 @@
                                                 ng-class="{'active' : $odd}" on-last-repeat>
                                                 <td class="text-left">
                                                     <span class="text-center-vertical"
-                                                          ng-bind="scorer.fullName" ></span>
+                                                          ng-bind="scorer.name" ></span>
                                                 </td>
                                                 <td class="text-left">
                                                     <span class="text-center-vertical"
