--- a/FutbolBrasil/futbol-brasil/app/styles/default.css
+++ b/FutbolBrasil/futbol-brasil/app/styles/default.css
@@ -436,9 +436,12 @@ body.content-mtm .row-back {
 .goal { font-size: 1.5em; }
 .status { color:#000000; font-weight: bold; }
 
-.status._0 { color:#fed100; }
-.status._2 { color:rgb(227,114,34); }
-.status._4 { color:rgb(122,184,0); }
+.status._1 { color: rgb(227,114,34); }     /*Played*/
+.status._2 { color: rgb(0,40,120);  }       /*Fixture*/
+.status._3 { color: rgb(227,114,34); }     /*Cancelled*/
+.status._4 { color: rgb(122,184,0);  }     /*Playing*/
+.status._5 { color: rgb(254,209,0);  }     /*Postponed*/
+.status._6 { color: rgb(254,209,0);  }     /*Suspended*/
 
 .status.PT { background-color:rgb(122,184,0); color: #ffffff; }
 .status.ST { background-color:#fed100; color: #000000; }
