FUTBOL BRASIL: Actualizaciones de fecha en predicciones y trim de GMT

--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/standings.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/standings.html
@@ -122,11 +122,11 @@
                     <table class="table">
                       <thead>
                       <tr>
-                        <th colspan="8" style="background-color: #7ab800;">
+                        <th colspan="8" class="h-header green">
                           <span ng-bind="rankings.group_name"></span>
                         </th>
                       </tr>
-                      <tr>
+                      <tr class="h-header light-blue">
                         <th></th>
                         <th style="text-align: left;" translate>
                           STANDINGS.TEAM
