--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/points.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/points.html
@@ -90,7 +90,7 @@
 </div>
 <div class="row" ng-hide="hasScore">
     <div class="col-xs-12 news">
-        <div class="no-content-panel" style="margin-top: 120px !important;">
+        <div class="no-content-panel" >
             <i class="mdi-action-info-outline"></i>
             <div class="no-content-panel-title" translate>EMPTY_STATES.POINTS</div>
         </div>
