FUTBOL BRASIL WAP: Actualziaciones de l&f y data de neuvo proveedor

--- a/FutbolBrasil/web/app/views/wap/competitions.scala.html
+++ b/FutbolBrasil/web/app/views/wap/competitions.scala.html
@@ -4,7 +4,7 @@
 
 } else {
 
-    @html4(true,route){
+    @html4(true,route, HD){
         <div class="row">
         @for(competition <- jCompetitions.get("competitions").iterator()) {
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 h-list" >
