--- a/FutbolBrasil/web/app/views/wap/error.scala.html
+++ b/FutbolBrasil/web/app/views/wap/error.scala.html
@@ -8,7 +8,7 @@
 
 } else {
 
-    @html4(viewMenu,"error"){
+    @html4(viewMenu,"error", HD){
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
                 <h3 style="padding: 15px !important;">@message</h3>
