--- a/FutbolBrasil/web/app/views/wap/login.scala.html
+++ b/FutbolBrasil/web/app/views/wap/login.scala.html
@@ -44,7 +44,7 @@
 
 } else {
 
-    @html4(false,""){
+    @html4(false,"",HD){
         <div class="row">
 
             @if(step == 0) {
@@ -61,7 +61,7 @@
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="padding:5px !important">
                     <form method="post" action="@routes.Wap.getPassword()">
-                        <input type="text" name="msisdn" size="15" /><br />
+                        <input type="text" name="msisdn" size="15" /><br /><br />
                         <input type="submit" value='@Messages.get("BUTTON_NEXT")' />
                     </form>
                 </div>
@@ -81,7 +81,7 @@
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="padding:5px !important">
                     <form id="create" method="post" action="@routes.Wap.createClient()">
                         <input type="hidden" name="msisdn" value='@(clientForm("msisdn").value)'   />
-                        <input type="password" name="password" size="10" /><br />
+                        <input type="password" name="password" size="10" /><br /><br />
                         <input type="submit" value='@Messages.get("BUTTON_CONFIRM")'>
                     </form>
                     <form id="again" method="post" action="@routes.Wap.getPassword()">
