--- a/FutbolBrasil/web/app/views/wap/matches.scala.html
+++ b/FutbolBrasil/web/app/views/wap/matches.scala.html
@@ -1,4 +1,6 @@
 @(HD: models.wap.HandsetDetection)(jMatches: com.fasterxml.jackson.databind.JsonNode)(jCompetition: com.fasterxml.jackson.databind.JsonNode)(limit: Integer)(page: Integer)
+@import play.i18n._
+
 
 @currentTime(fecha: String) = @{
     import java.util.Date
@@ -11,7 +13,7 @@
 
 } else {
 
-    @html4(true,"matches"){
+    @html4(true,"matches",HD){
 
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
@@ -37,7 +39,11 @@
                             <td style="width: 33% !important;">
                                 <span>@currentTime(item.get("date").asText())</span>
                                 <br />
-                                <a href='@routes.Wap.mtm(jCompetition.get("competition").get("id").asInt(),item.get("id_game_matches").asInt(),0)' class='status _@{item.get("status").get("id_status").asText()}'>@item.get("status").get("name").asText()</a>
+                                @if(item.get("status").get("id_status").asInt() != 3) {
+                                    <a href='@routes.Wap.mtm(jCompetition.get("competition").get("id").asInt(),item.get("id_game_matches").asInt(),0)' class='status _@{item.get("status").get("id_status").asText()}'>@Messages.get("MATCH-STATUS-" + item.get("status").get("id_status").asText())</a>
+                                } else {
+                                    <span  class='status _@{item.get("status").get("id_status").asText()}'>@Messages.get("MATCH-STATUS-" + item.get("status").get("id_status").asText())</span>
+                                }
                             </td>
 
                             <td style="width: 33% !important;">
