--- a/FutbolBrasil/web/app/views/wap/scorers.scala.html
+++ b/FutbolBrasil/web/app/views/wap/scorers.scala.html
@@ -5,7 +5,7 @@
 
 } else {
 
-    @html4(true,"scorers"){
+    @html4(true,"scorers",HD){
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
                 <table class="table">
