--- a/FutbolBrasil/web/app/views/wap/xhtml.scala.html
+++ b/FutbolBrasil/web/app/views/wap/xhtml.scala.html
@@ -9,6 +9,8 @@
 </head>
     <body >
         <div style="width:@{HD.getResolutionWidth()}px; height:auto;">
+            <img  src='@HD.getBanner().get("url").asText()'
+                  style='width:@HD.getBanner().get("width").asText()px; height:@HD.getBanner().get("height").asText()px;' >
             <h3 style="text-transform: uppercase;">@Messages.get("APP_TITLE")</h3>
             @content
         </div>
