--- a/FutbolBrasil/web/app/views/wap/mtm.scala.html
+++ b/FutbolBrasil/web/app/views/wap/mtm.scala.html
@@ -3,7 +3,7 @@
 
 @refresh = {
     <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="text-align:center; background:rgb(44,156,211); color:#ffffff;" >
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="text-align:center; background:rgb(122,184,0); color:#ffffff;" >
             <!--a href='@routes.Wap.mtm(idCompetition,idMatch,jResponse.get("actions").get(0).get("events").get(0).get("id_game_match_events").asInt())'>@Messages.get("MTM_REFRESH_LINK")</a-->
             <a href='@routes.Wap.mtm(idCompetition,idMatch,0)'>@Messages.get("MTM_REFRESH_LINK")</a>
         </div>
@@ -45,9 +45,12 @@
                 </table>
             </div>
         </div>
-
         @refresh
-
+        <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="text-align:center; background:rgb(122,184,0);  color:#ffffff;" >
+                <a href='@routes.Wap.mtm(idCompetition,idMatch,0)'>@Messages.get("MTM_REFRESH_LINK")</a>
+            </div>
+        </div>
 
         @for(action <- jResponse.get("actions").iterator()) {
             <div class="row">
