--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/news.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/news.html
@@ -38,7 +38,7 @@
 
                 <div class="col-xs-12">
                   <br />
-                  <img src="{{contentNews.img}}" alt="{{contentNews.title}}" class="img-responsive"  >
+                  <img src="{{contentNewsImg}}" alt="{{contentNews.title}}" class="img-responsive"  >
 
                 </div>
                 <div class="col-xs-12">
