FUTBOL BRASIL WAP: se mejora el tamaño maximo del header

--- a/FutbolBrasil/web/app/views/wap/matches.scala.html
+++ b/FutbolBrasil/web/app/views/wap/matches.scala.html
@@ -33,7 +33,7 @@
                     <tbody>
 
                     @for(item <- jMatches.get("fixtures").iterator()) {
-                        <tr style="width: 100% !important; height-min:25px  !important;" >
+                        <tr style="width: 100% !important; height-min:25px  !important;" class="h-list">
 
                             <td style="width: 33% !important;" >
                                 <span>@item.get("homeTeam").get("name").asText()</span>
