--- a/FutbolBrasil/web/app/views/wap/html4.scala.html
+++ b/FutbolBrasil/web/app/views/wap/html4.scala.html
@@ -33,21 +33,22 @@
     <body>
         <div class="container">
 
+            <div class="row">
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
+                    <img  src='@HD.getBanner().get("url").asText()' style='position:relative; width:100%; height:auto;' />
+                </div>
+            </div>
 
-                <img  src='@HD.getBanner().get("url").asText()' style='position:relative; width:@HD.getBanner().get("width").asText()px; height:@HD.getBanner().get("height").asText()px;' >
-            <div class="header" style="text-align:center;">@Messages.get("APP_TITLE")</div>
-
+            <!--div class="header" style="text-align:center;">@Messages.get("APP_TITLE")</div-->
             @if(bMenu) {
                 @menu(sRoute)
             }
-
             @content
-
             @if(bMenu) {
-                @menu(sRoute)
+            @menu(sRoute)
             }
+            <!--div class="header" style="text-align:center;">@Messages.get("APP_TITLE")</div-->
 
-            <div class="header" style="text-align:center;">@Messages.get("APP_TITLE")</div>
         </div>
 
     </body>
