--- a/FutbolBrasil/web/app/views/wap/xhtml.scala.html
+++ b/FutbolBrasil/web/app/views/wap/xhtml.scala.html
@@ -1,4 +1,4 @@
-@(HD: models.wap.HandsetDetection)(content: Html)<?xml version="1.0" encoding="UTF-8"?>
+@(HD: models.wap.HandsetDetection)(content: Html)
 @import play.i18n._
 <!DOCTYPE html
         PUBLIC "-//WAPFORUM//DTD XHTML Mobile 1.0//EN"
@@ -7,11 +7,11 @@
 <head>
     <title>@Messages.get("APP_TITLE")</title>
 </head>
-    <body >
-        <div style="width:@{HD.getResolutionWidth()}px; height:auto;">
+    <body style="margin:0; padding:0;" >
+        <div style='width:@{HD.getBanner().get("width").asText()}px; height:auto;'>
             <img  src='@HD.getBanner().get("url").asText()'
-                  style='width:@HD.getBanner().get("width").asText()px; height:@HD.getBanner().get("height").asText()px;' >
-            <h3 style="text-transform: uppercase;">@Messages.get("APP_TITLE")</h3>
+                  style='width:@HD.getBanner().get("width").asText()px; height:@HD.getBanner().get("height").asText()px;' />
+            <!--h3 style="text-transform: uppercase;">@Messages.get("APP_TITLE")</h3-->
             @content
         </div>
     </body>
